PageHome: Increase image size to avoid stretching

--- a/src/styles.css
+++ b/src/styles.css
@@ -220,7 +220,7 @@ a {
 .projimg {
   width: 100%;
   max-width: 12em;
-  height: 10rem;
+  height: 11rem;
   /*margin-bottom: 30px;*/
   padding: 5px;
 }
